@@ -37,7 +37,6 @@
 #import "Camera.h"
 #import "CameraAction.h"
 #import "CocosNode.h"
-#import "CocosNodeExtras.h"
 #import "Director.h"
 #import "InstantAction.h"
 #import "IntervalAction.h"
