@@ -47,3 +47,9 @@
 @interface Atlas7 : AtlasDemo
 {}
 @end
+
+@interface Atlas8 : AtlasDemo
+{
+	int dir;
+}
+@end
